# useme-mcp-server

./: README.md  pyproject.toml  server.py
config/: instructions.py
data/: categories.json  instructions.md
useme_mcp/: __init__.py  models.py
useme_mcp/services/: billing_calculator.py  category_jobs.py  category_service.py  job_scraper.py  user_profile.py
