[project]
name = "useme-mcp-server"
version = "0.1.0"
license = "MIT"
description = "MCP Server providing data fetching tools for the Useme.com freelance platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cloudscraper>=1.2.71",
    "fastmcp>=2.11.3",
    "pydantic>=2.11.7",
]
